added logo and other stuff

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>Dawnline</h1>
+        <img src="/images/logo.png" height=200>
         <p>Dawnline is an advanced web app for working with audio.</p>
         <a href="/project">Go to Dawnline</a>
     </body>
