--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>New Project - Dawnline</title>
+        <link rel="stylesheet" href="/css/editor.css">
     </head>
     <body>
         <h1>Put Dawnline here</h1>
