added editor visuals

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -4,7 +4,23 @@
         <link rel="stylesheet" href="/css/editor.css">
     </head>
     <body>
-        <h1>Put Dawnline here</h1>
+        <div class="menubar">
+            <div class="menubar-item" id="dawnline-logo">
+                <img src="/images/logo.png" width="65">
+            </div>
+            <div class="menubar-item" id="button-file">
+                <p>File</p>
+            </div>
+            <div class="menubar-item" id="button-edit">
+                <p>Edit</p>
+            </div>
+            <div class="menubar-item" id="button-view">
+                <p>View</p>
+            </div>
+        </div>
+        <div id="menu">
+
+        </div>
         <script src="/js/editor.js"></script>
     </body>
 </html>
