--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
         <h1>Dawnline</h1>
         <img src="/images/logo.png" height=200>
         <p>Dawnline is an advanced web app for working with audio.</p>
-        <a href="/project">Go to Dawnline</a>
+        <a href="/editor">Go to Dawnline</a>
     </body>
 </html>
