--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -19,13 +19,18 @@
             </div>
         </div>
         <div id="channel-deck"></div>
-        <div id="menu" style="display:none;"></div>
+        <div id="menu" tabindex=0 style="display:none;"></div>
         <div id="fade-background" style="display:none;"></div>
         <div class="window" id="window-about" style="display:none;">
             <h1>About Dawnline</h1>
             <p>Dawnline was started by TurnOffTheTV, but these people have also contributed:</p>
             <!--<ul></ul>-->
             <a>Dawnline is open-source on <a href="https://github.com/TurnOffTheTV/dawnline">GitHub</a>!</p>
+        </div>
+        <div class="window" id="window-rename" style="display:none;">
+            <h1>Rename Project</h1>
+            <input id="input-rename" placeholder="New Project">
+            <input type="button" id="button-rename" value="Rename">
         </div>
         <script src="https://cdn.jsdelivr.net/npm/webmidi@latest/dist/iife/webmidi.iife.js"></script>
         <script src="/js/editor.js"></script>
