Improved main page

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -28,7 +28,7 @@
             <ul>
                 <li>TurnOffTheTV</li>
             </ul>
-            <p>Dawnline is open-source on <a href="https://github.com/TurnOffTheTV/dawnline">GitHub</a>!</p>
+            <p>Dawnline is open-source on <a href="https://github.com/TurnOffTheTV/dawnline" target="_blank">GitHub</a>!</p>
         </div>
         <div class="window" id="window-rename" style="display:none;">
             <h1>Rename Project</h1>
