--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <html>
     <head>
         <title>Dawnline</title>
+        <link rel="stylesheet" href="/css/main.css">
     </head>
-    <body>
-        <h1>Dawnline</h1>
-        <img src="/images/logo.png" height=200>
-        <p>Dawnline is an advanced web app for working with audio.</p>
-        <a href="/editor">Go to Dawnline</a>
+    <h3>
+        <div class="main-info">
+            <h1>Dawnline</h1>
+            <img src="/images/logo.png" height=200>
+            <p>An online DAW</p>
+            <h3><a href="/editor">Go to Dawnline</a></h3>
+        </div>
     </body>
 </html>
