--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -6,6 +6,14 @@
     </head>
     <body>
         <div id="channel-deck"></div>
+        <div id="controlbar">
+            <div class="controlbar-item" id="button-play">
+                <img src="/images/play.svg" width="10">
+            </div>
+            <div class="controlbar-item" id="button-pause">
+                <img src="/images/pause.svg" width="10">
+            </div>
+        </div>
         <div id="menubar">
             <div class="menubar-item" id="button-logo">
                 <img src="/images/logo.png" width="65">
