can parse DLP files

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -44,6 +44,7 @@
             <input type="button" id="button-rename" value="Rename">
         </div>
         <script src="https://cdn.jsdelivr.net/npm/webmidi@latest/dist/iife/webmidi.iife.js"></script>
+        <script src="/js/dlp.js"></script>
         <script src="/js/editor.js"></script>
     </body>
 </html>
