added synth basics and comments

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -28,6 +28,7 @@
                 <p>View</p>
             </div>
         </div>
+        <div id="synth-overlay" style="display:none;"></div>
         <div id="menu" tabindex=0 style="display:none;"></div>
         <div id="fade-background" style="display:none;"></div>
         <div class="window" id="window-about" style="display:none;">
@@ -45,6 +46,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/webmidi@latest/dist/iife/webmidi.iife.js"></script>
         <script src="/js/dlp.js"></script>
+        <script src="/js/synth.js"></script>
         <script src="/js/editor.js"></script>
     </body>
 </html>
