Subdued colors a little and fixed synth

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -27,8 +27,13 @@
             <div class="menubar-item" id="button-view">
                 <p>View</p>
             </div>
+            <div class="menubar-item" id="button-synth" style="display:none;">
+                <p>Synth</p>
+            </div>
         </div>
-        <div id="synth-overlay" style="display:none;"></div>
+        <div id="synth-overlay" style="display:none;">
+            <h3 id="synth-name" style="position: absolute;left:0px;top:0px;height:min-content;cursor:pointer;">New Synth Patch</h3>
+        </div>
         <div id="menu" tabindex=0 style="display:none;"></div>
         <div id="fade-background" style="display:none;"></div>
         <div class="window" id="window-about" style="display:none;">
@@ -43,6 +48,18 @@
             <h1>Rename Project</h1>
             <input id="input-rename" placeholder="New Project">
             <input type="button" id="button-rename" value="Rename">
+        </div>
+        <div class="window" id="window-addmodule" style="display:none;">
+            <h1>Add Synth Module</h1>
+            <div class="scrollmenu">
+                <span class="scrollmenu-item">Oscillator</span>
+                <span class="scrollmenu-item">MIDI Input</span>
+                <span class="scrollmenu-item">Microphone Input</span>
+                <span class="scrollmenu-item">Sequencer</span>
+                <span class="scrollmenu-item">Gain</span>
+                <span class="scrollmenu-item">Reverb</span>
+                <span class="scrollmenu-item">Delay</span>
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/webmidi@latest/dist/iife/webmidi.iife.js"></script>
         <script src="/js/dlp.js"></script>
