Worked on file interface and cleaned stuff up

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -49,6 +49,11 @@
             <input id="input-rename" placeholder="New Project">
             <input type="button" id="button-rename" value="Rename">
         </div>
+        <div class="window" id="window-renamesynth" style="display:none;">
+            <h1>Rename Synth Patch</h1>
+            <input id="input-renamesynth" placeholder="New Synth Patch">
+            <input type="button" id="button-renamesynth" value="Rename">
+        </div>
         <div class="window" id="window-addmodule" style="display:none;">
             <h1>Add Synth Module</h1>
             <div class="scrollmenu">
