--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
         <title>Dawnline</title>
         <link rel="stylesheet" href="/css/main.css">
     </head>
-    <h3>
+    <body>
         <div class="main-info">
             <h1>Dawnline</h1>
             <img src="/images/logo.png" height=200>
