Added DLSP support

--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -32,9 +32,9 @@
 		<div id="synth-view" class="view" style="display:none">
 			<div id="patchbar" class="h bar">
 				<div id="patchbar-patches" class="topbar-item">Patches</div>
-				<div id="patchbar-file" class="topbar-item" aria-disabled>File</div>
-				<div id="patchbar-generators" class="topbar-item" aria-disabled>Generators</div>
-				<div id="patchbar-basics" class="topbar-item" aria-disabled>Basics</div>
+				<div id="patchbar-file" class="topbar-item">File</div>
+				<div id="patchbar-generators" class="topbar-item" disabled>Generators</div>
+				<div id="patchbar-basics" class="topbar-item" disabled>Basics</div>
 			</div>
 			<div style="height:100%;width:100%;">
 				<canvas id="synth-canvas"></canvas>
