--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -36,7 +36,7 @@
 				<div id="patchbar-generators" class="topbar-item" disabled>Generators</div>
 				<div id="patchbar-basics" class="topbar-item" disabled>Basics</div>
 			</div>
-			<div style="height:100%;width:100%;">
+			<div style="height:100%;width:100%;background:black;">
 				<canvas id="synth-canvas"></canvas>
 			</div>
 		</div>
